--- a/licuadora.html
+++ b/licuadora.html
@@ -11,6 +11,7 @@
   
   <div class="container">
     <div id="blender" class="blender">
+      <center><h4>Marlon Leonor</h4></center>
       <div id="blender-button" class="blender-button" onclick="controlarLicuadora()"></div>
     </div>
   </div>
